--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,9 +24,10 @@ rand = "0.7.3"
 rbx_binary = "0.5.0"
 rbx_dom_weak = "1.10.1"
 rbx_xml = "0.11.4"
-roblox_install = "0.2.2"
+roblox_install = { git = "https://github.com/darmyn/roblox-install" }# "0.2.2"
 serde = { version = "1.0.106", features = ["derive"] }
 serde_json = "1.0.51"
 structopt = "0.3.13"
+sysinfo = "0.38.0"
 tempfile = "3.1.0"
-thiserror = "1.0.14"
+thiserror = "1.0.24"
